src/styles/layout/_assigned_layout.sass
#assigned
  align-items: start
  display: grid
  grid-column: 1 / 4
  grid-template-rows: 64px calc(100% - 69px)
  height: 100%

  > .header
    align-items: center
    align-self: stretch
    display: grid
    grid-column-gap: $gutter * 12
    grid-template-columns: 1fr auto auto
    justify-items: end
    padding-left: ($gutter * 8)

    .column-icon
      width: 20px

  > .content
    display: grid
    grid-template-rows: auto 1fr
    height: 100%
    padding: $gutter

    .assgin-tabs
      display: grid
      grid-auto-flow: column
      grid-column-gap: $gutter * 8
      justify-content: start

      .tab
        padding: $gutter * 12

    .table-box
      align-items: start
      display: grid
      height: 100%

      .table
        border-collapse: collapse
        table-layout: fixed

        .content
          .row
            .cell
              white-space: nowrap

        .header,
        .content
          .row
            height: 40px

            &.selected
              position: relative

            .cell
              box-sizing: border-box
              padding: 0 $gutter * 8
              position: relative

              &.id
                max-width: 60px
                min-width: 60px

              &.name
                max-width: 200px
                min-width: 200px

              &.tempo
                max-width: 85px
                min-width: 85px

              &.type
                max-width: 72px
                min-width: 72px

              &.time-card
                max-width: 108px
                min-width: 108px

              &.my-start
                max-width: 100px
                min-width: 100px

              &.my-target
                max-width: 100px
                min-width: 100px

              &.hours-worked
                max-width: 85px
                min-width: 85px

              &.project
                max-width: 84px
                min-width: 84px

              &.priority
                max-width: 85px
                min-width: 85px

              .tooltip
                position: absolute

          &.header
            .cell
              .title-container
                display: grid
                grid-column-gap: $gutter * 8
                justify-content: center

          &.content
            .cell
              overflow: hidden
              text-align: center

              &.title
                text-align: left

              &.tempo
                .tempo-card
                  padding: $gutter * 4 0
                  width: 80px

        &.newly-assigned
          .header,
          .content
            .row
              .cell
                &.id
                  max-width: 60px
                  min-width: 60px

                &.name
                  max-width: 525px
                  min-width: 525px
                  text-align: left

                  .title-container
                    justify-content: start

                &.tempo
                  max-width: 85px
                  min-width: 85px

                &.type
                  max-width: 130px
                  min-width: 130px

                &.project
                  max-width: 130px
                  min-width: 130px

        &.need-estimate-items
          .header,
          .content
            .row
              .cell
                &.id
                  max-width: 60px
                  min-width: 60px

                &.name
                  max-width: 441px
                  min-width: 441px
                  text-align: left

                  .title-container
                    justify-content: start

                &.tempo
                  max-width: 85px
                  min-width: 85px

                &.type
                  max-width: 100px
                  min-width: 100px

                &.response-time
                  max-width: 120px
                  min-width: 120px

                &.project
                  max-width: 120px
                  min-width: 120px

                &.priority
                  max-width: 84px
                  min-width: 84px

        &.upcoming-items
          .header,
          .content
            .row
              .cell
                &.id
                  max-width: 60px
                  min-width: 60px

                &.name
                  max-width: 209px
                  min-width: 209px
                  text-align: left

                  .title-container
                    justify-content: start

                &.tempo
                  max-width: 85px
                  min-width: 85px

                &.type
                  max-width: 72px
                  min-width: 72px

                &.starts-in
                  max-width: 108px
                  min-width: 108px

                &.my-start
                  max-width: 100px
                  min-width: 100px

                &.my-target
                  max-width: 100px
                  min-width: 100px

                &.hours-worked
                  max-width: 84px
                  min-width: 84px

                &.project
                  max-width: 84px
                  min-width: 84px

                &.priority
                  max-width: 84px
                  min-width: 84px

